# Masterthesis

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  alpamayo_minimal_inference.py  run_overnight_exp10b.sh  vlm_config.yaml
archive/: 01_dataset_exploration.ipynb  03_vlm_pipeline.ipynb  MPS_TEST_PROGRESS.md  QWEN3VL_GROUNDING.md  RUN_SCREENING.md  TESTING_STATUS.md  alpamayo_data_exploration.py  model_comparison_metrics.csv  perturbation_framework_proposal.md  pyproject.toml
archive/pipeline/: README.md  step_0_sample.py  step_3_infer.py
archive/pipeline/lib/: io.py  trajectory.py
archive/pipeline/notebooks/: unified_analysis.ipynb
archive/pipeline/notebooks/figures/: fig02_stability_map.html  fig04_h1_perkey_correlation.html  fig08_sharpness_histograms.html  fig09_ade_transitions.html
archive/pipeline/notebooks/utils/: __init__.py  data.py
archive/runs/validation_03/20260112_022848/: config.json
archive/runs/validation_03/20260112_023039/: config.json
archive/runs/validation_03/20260112_025049/: config.json
archive/runs/validation_03/20260112_113203/: config.json
archive/runs/validation_03/20260112_122050/: config.json
archive/runs/validation_03/20260112_122257/: config.json
archive/runs/validation_03/20260112_122405/: config.json  metrics.jsonl
archive/scripts/: README.md  __init__.py  run_optimization_from_existing_data.py
archive/tests/: analyze_model_comparison.py  pilot_test.py  test_model_behavior.py  test_model_comparison.py  test_ollama_api.py  test_qwen_grounding.py  test_vlm_fixes.py  vlm_mock_data.py
(+1029 files in other folders)
